--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
         <nav>
             <div class="logo">
                 <a href="">
-                    <img src="header-logo.jpg" alt="">
+                    <img src="header-logo-removebg.png" alt="">
                 </a>
             </div>
+            <input type="checkbox" id="navToggleCheckbox">
             <div class="navBtns">
                     <ul class="navLinks">
                         <li><a href="">Home</a></li>
@@ -26,6 +27,16 @@
                         get quote
                     </button>
             </div>
+            <label for="navToggleCheckbox" class="navToggle">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" 
+                    class="bi bi-list openNav" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
+                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" 
+                    fill="currentColor" class="bi bi-x-lg closeNav" viewBox="0 0 16 16">
+                    <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"/>
+                </svg>
+            </label>
         </nav>
     </div>
 </body>
