unfished hero section

--- a/index.html
+++ b/index.html
@@ -38,6 +38,41 @@
                 </svg>
             </label>
         </nav>
+
+
+        <div class="hero-section">
+            <div class="heroContent1">
+                <p>
+                    <span><i class="bi bi-star-fill"></i></span>
+                    <span>5/5 rating on trust pilot</span>
+                </p>
+                <p>
+                    Transform Your Home with Expert 
+                    Painting Services
+                </p>
+                <p>
+                    Experience the transformation with our 
+                    dedicated team, delivering vibrant results 
+                    that last.
+                </p>
+                <button>
+                    <a href="">Get a Free Quote <i class="bi bi-chevron-right"></i></a>
+                </button>
+                <div>
+                    <p>
+                        <span><i class="bi bi-clock-fill"></i></span>
+                        <span>Mon-Fri (8am-5pm) Sat-Sun (10am-1pm)</span>
+                    </p>
+                    <p>
+                        <span><i class="bi bi-telephone-fill"></i></span>
+                        <span>Contact Us +088 (246) 642-27-10</span>
+                    </p>
+                </div>
+            </div>
+            <div class="heroContent2">
+                <img src="hero.png" alt="">
+            </div>
+        </div>
     </div>
 </body>
 </html>
