finshed why choose us section, ready for all screen sizes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" 
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" 
+        crossorigin="anonymous" referrerpolicy="no-referrer" 
+    />
     <title>Home - xanny paints</title>
 </head>
 <body>
@@ -73,6 +77,71 @@
                 <img src="hero.png" alt="">
             </div>
         </div>
+
+        <div class="why-choose-us-section">
+                <svg class="whyChooseUsCurve" viewBox="0 0 500 150" preserveAspectRatio="none">
+                    <path d="M0,80 C160, 300 350, -90 500, 50 L500, 7 L0, 5 Z" fill="#09095e"/>
+                </svg>
+            <div class="whyChooseUsContent">
+                <h1 class="whychooseh1">
+                    <i></i><i></i>
+                    <span>why choose us</span>
+                </h1>
+                <p>
+                    We offer Top-Tier Residential Painting Services
+                </p>
+                <div class="whyChoooseDetails">
+                    <div class="whyChoosedetail">
+                        <span>
+                            <i class="fa-solid fa-brush"></i>
+                        </span>
+                        <p>
+                            <span>
+                                Expert Craftsmanship
+                            </span>
+                            <span>
+                                Trained professionals dedicated to 
+                                delivering exceptional results.
+                            </span>
+                        </p>
+                    </div>
+                    <div class="whyChoosedetail">
+                        <span>
+                            <i class="fa-solid fa-fill-drip"></i>
+                        </span>
+                        <p>
+                            <span>
+                                Premium Materials
+                            </span>
+                            <span>
+                                We use only high-quality paints and 
+                                materials for lasting durability.
+                            </span>
+                        </p>
+                    </div>
+                    <div class="whyChoosedetail">
+                        <span>
+                            <i class="fa-solid fa-star"></i>
+                        </span>
+                        <p>
+                            <span>
+                                Customer Satisfaction
+                            </span>
+                            <span>
+                                We prioritize your needs and ensure you 
+                                are completely satisfied with our work.
+                            </span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+
+
+
+
+
     </div>
 </body>
 </html>
