finshed the about us HTML structure and also added two about us images

--- a/index.html
+++ b/index.html
@@ -138,6 +138,62 @@
         </div>
         
 
+        <div class="about-us-section">
+            <div class="aboutContent1">
+                <img src="about-us-01.jpg" alt="">
+                <img src="about-us-04.jpg" alt="">
+            </div>
+            <div class="aboutContent2">
+                <h1>
+                    <span></span><span></span>
+                    <span>ABOUT US</span>
+                </h1>
+                <p>
+                    Discover Our Passion for Painting Excellence
+                </p>
+                <p>
+                    At BrushWorks, painting is more than just a 
+                    service—it’s an art form. With years of 
+                    experience and a deep commitment to 
+                    transforming spaces, our team of skilled 
+                    professionals is dedicated to bringing 
+                    your vision to life.
+                </p>
+                <div>
+                    <p>
+                        <span><i class="fa-solid fa-palette"></i></span>
+                        <span>Expert Craftsmanship</span>
+                    </p>
+                    <span></span>
+                    <p>
+                        <span><i class="fa-solid fa-user"></i></span>
+                        <span>Customer Focused</span>
+                    </p>
+                </div>
+                <div>
+                    <p>
+                        <span><i class="fa-solid fa-check"></i></span>
+                        <span>
+                            Delivering precision and detail in every project.
+                        </span>
+                    </p>
+                    <p>
+                        <span><i class="fa-solid fa-check"></i></span>
+                        <span>
+                            Your satisfaction is our top priority.
+                        </span>
+                    </p>
+                    <p>
+                        <span><i class="fa-solid fa-check"></i></span>
+                        <span>
+                            Ensuring lasting beauty and durability.
+                        </span>
+                    </p>
+                </div>
+                <button>Know More</button>
+            </div>
+        </div>
+
 
 
 
