first completed index page, published

--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
                         <li><a href="">Contact</a></li>
                     </ul>
                     <button>
-                        get quote
+                        Book us Now <i class="fa-solid fa-business-time"></i>
                     </button>
             </div>
             <label for="navToggleCheckbox" class="navToggle">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" 
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" 
                     class="bi bi-list openNav" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
                 </svg>
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" 
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" 
                     fill="currentColor" class="bi bi-x-lg closeNav" viewBox="0 0 16 16">
                     <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"/>
                 </svg>
@@ -60,7 +60,7 @@
                     that last.
                 </p>
                 <button>
-                    <a href="">Get a Free Quote <i class="bi bi-chevron-right"></i></a>
+                    <a href="">Book a Service <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </button>
                 <div>
                     <p>
@@ -146,7 +146,7 @@
             <div class="aboutContent2">
                 <h1>
                     <span></span><span></span>
-                    <span>ABOUT US</span>
+                    ABOUT US
                 </h1>
                 <p>
                     Discover Our Passion for Painting Excellence
@@ -190,9 +190,196 @@
                         </span>
                     </p>
                 </div>
-                <button>Know More</button>
+                <a href="">Know More</a>
             </div>
         </div>
+
+
+        <div class="our-services">
+            <h1>
+                <span></span><span></span>
+                OUR SERVICES
+            </h1>
+            <p>
+                Transformative Painting Services Tailored to Your Needs
+            </p>
+            <div class="servicesDetails">
+                <div class="servicesDetail">
+                    <img src="service01.jpg" alt="">
+                    <h2>Indoor Painting</h2>
+                    <p>
+                        Refresh your interiors with our 
+                        expert indoor painting services.
+                    </p>
+                    <a href="">
+                        Know More <span><i class="fa-solid fa-angle-right"></i></span>
+                    </a>
+                </div>
+                <div class="servicesDetail">
+                    <img src="services02.jpg" alt="">
+                    <h2>Outdoor Painting</h2>
+                    <p>
+                        Boost your home’s curb appeal with our 
+                        weather-resistant painting solutions.
+                    </p>
+                    <a href="">
+                        Know More <span><i class="fa-solid fa-angle-right"></i></span>
+                    </a>
+                </div>
+                <div class="servicesDetail">
+                    <img src="services03.jpg" alt="">
+                    <h2>Object Painting</h2>
+                    <p>
+                        Bring new life to your cherished objects with our 
+                        precise object painting services.
+                    </p>
+                    <a href="">
+                        Know More <span><i class="fa-solid fa-angle-right"></i></span>
+                    </a>
+                </div>
+            </div>
+            <a href="">View All Services <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+        </div>
+
+        <div class="recent-projects">
+            <h1>
+                <span></span><span></span>
+                Recent Projects
+            </h1>
+            <div>
+                <p>
+                    Transformation We Bring to Your Home.
+                </p>
+                <a href="">
+                    Book us Now <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                </a>
+            </div>
+            <div class="projectPictures">
+                <div class="projectPictures1">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="projectPictures2">
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="reviews-section">
+            <h1>
+                <span></span><span></span>
+                Satisfied Clients
+            </h1>
+            <p>
+                Hear from our Satisfied Customers
+            </p>
+            <div class="reviews">
+                <div class="review">
+                    <h2>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </h2>
+                    <p>
+                        The team at BrushWorks was outstanding from start to finish. 
+                        They helped us choose the perfect colors and executed the 
+                        job flawlessly. Our home feels brand new, and we've received 
+                        so many compliments from friends and family. 
+                        Truly a top-notch service!
+                    </p>
+                    <div>
+                        <img src="team-01.png" alt="">
+                        <p>
+                            Jane Head
+                        </p>
+                    </div>
+                </div>
+                <div class="review">
+                    <h2>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </h2>
+                    <p>
+                        We were amazed at the professionalism and efficiency of BrushWorks. 
+                        They completed our entire house within the timeline promised, 
+                        with incredible attention to detail. 
+                        The quality of their work is exceptional, 
+                        and we are thrilled with the results!
+                    </p>
+                    <div>
+                        <img src="team-02.png" alt="">
+                        <p>
+                            Mark Wood
+                        </p>
+                    </div>
+                </div>
+                <div class="review">
+                    <h2>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </h2>
+                    <p>
+                        Excellent service and beautiful results! The painters at BrushWorkswere 
+                        courteous, tidy, and very skilled. They transformed our 
+                        living room with such precision, it’s like a whole new space. 
+                        We highly recommend them to anyone looking for 
+                        quality painting services.
+                    </p>
+                    <div>
+                        <img src="team-03.png" alt="">
+                        <p>
+                            Tom Henry
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="section-after-reviews">
+            <div class="sectionAfterREviewContent">
+                <span>
+                    <i class="fa-solid fa-paint-roller"></i>
+                </span>
+                <p>
+                    Ready to Transform your Space with a Fresh Coat of Paint?
+                </p>
+                <a href="">Book a Service <span><i class="fa-solid fa-arrow-up-right-from-square"></i></span></a>
+            </div>
+        </div>
+
+
+        <footer>
+            <div>
+                <img src="footer-logo.svg" alt="">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Services</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+                <div class="socialLinks">
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-linkedin-in"></i>
+                    <i class="fa-brands fa-x-twitter"></i>
+                </div>
+            </div>
+            <hr>
+            <p>
+                <i class="bi bi-c-circle"></i> Copyright 2025 xanny Home Painting
+            </p>
+        </footer>
 
 
 
